--- a/index.css
+++ b/index.css
@@ -11,36 +11,42 @@ body{
     background-color: var(--primary-color);
    padding: 0;
    margin:0;
+   height: 1000vh;
 }
 
-nav .container {
-    /* background-color: aqua; */
+nav .navbar {
     margin-top: 32px;
-  
 }
 
-nav .container li {
+nav .navbar li {
     display: inline;
     font-weight: 600;
     font-size: 16px;
+    margin-right: 30px;
+}
+nav .navbar .list{
+    padding-right: 90px;
 }
 
-nav .container a{
+nav .navbar a{
     text-decoration: none;
     color: #fff;
     text-align: center;
     margin: 15px;
-
+    
 }
 
-nav .container h1 {
+nav .navbar h1 {
     margin-right: auto;
     font-weight: 500;
     font-size: 40px;
+    padding-left: 17rem;
 }
 
 .greetings{
     margin-top: 200px;
+    margin-left: 120px;
+    display: flex;
 }
 
 .greetings h1 {
@@ -56,11 +62,12 @@ nav .container h1 {
     color: #fff;
     background-color: #554EF1;
     font-weight: 700;
+    border-radius: 10px;
 
 }
 .greetings .btn1:hover{
     color: black;
-    background-color: #fff;
+    background-color: #85E2FF;
 
 }
 
@@ -68,9 +75,30 @@ nav .container h1 {
     color: black;
     background-color: #fff;
     font-weight: 700;
+    font-size: 16px;
+    border-radius: 10px;
 }
-.greetings .btn2:hover{
-    color: #fff ;
-    background-color: #554EF1;
 
+.greetings .btn2:hover{
+    color: black;
+    background-color: #85E2FF;
+
+}
+
+.greetings .logo{
+    font-size: 50px;
+    margin-top: 2rem;
+}
+
+
+.greetings img{
+border-radius: 360px;
+    max-height: 35rem;
+    max-width: 35rem;
+    position: absolute;
+    margin-left: 60rem;
+}
+
+.greetings .wrapper{
+    position: relative;
 }
