--- a/index.css
+++ b/index.css
@@ -54,6 +54,7 @@ nav .navbar h1 {
 
 .greetings .content{
     padding-left: 12%;
+    /* background-color: #0ccff0; */
 }
 
 .greetings h1 {
@@ -115,4 +116,149 @@ nav .navbar h1 {
     position: absolute;
     /* z-index: 1; */
     margin-left: 50%;
+}
+
+.profile {
+    position:relative ;
+    width: 400px;
+    height: 400px;
+    background-color: black;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-left: 22%;
+}
+
+.profile::before{
+    content: '';
+    position: absolute;
+    inset: -10px 110px;
+    background: linear-gradient(315deg, #0ccff0, #d400d4);    
+    transition: 0.5s;
+    animation: animasi 4s linear infinite;
+}
+
+.profile:hover::before {
+    inset:-20px 0px;
+}
+
+@keyframes animasi {
+    0% {
+        transform: rotate(0deg);
+    }
+    0%{
+        transform: rotate(360deg);
+    }
+}
+
+.profile::after{
+    content: '';
+    position: absolute;
+    inset: 6px;
+    background: var(--primary-color);
+    border-radius: 50%;
+    z-index: 1;
+}
+.border-img{
+    position: absolute;
+    inset: 20px;
+    border: solid 6px;
+    z-index: 3;
+    border-radius: 50% ;
+    overflow: hidden;
+}
+
+.border-img img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about {
+    background-color: #E8E8E8;
+    height: 100vh;
+    margin-top: 16%;
+    display: flex;
+}
+
+.about .about-pict{
+    position: absolute;
+    /* border: solid 2px; */    
+    border-radius: 120px ;
+    overflow: hidden;
+    height: 26rem;
+    width: 26rem;
+    margin-left: 7rem;
+    margin-top: 10%;
+}
+.about .container{
+    width: 20%;
+    margin-left: 0;
+    justify-content: center;
+
+}
+
+ .about img{
+    position: absolute;
+    height: 130%;
+    width: 26rem;
+    object-fit: cover;
+}
+
+.text{
+    margin-top: 4%;
+    margin-left: 40%;
+    margin-right:5%;
+}   
+
+.text h1{
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+.text h5{
+    margin-left: 4%;
+}
+
+.text h4{
+    line-height: 2;
+}
+
+.about  button{ 
+    color: #fff;
+    background-color: #554EF1;
+    font-weight: 700;
+    border-radius: 10px;
+}
+
+.about .button {
+    font-size: 30px;
+    
+}
+
+@media  screen and (max-width:1200px) {
+    nav .navbar h1 {
+        margin-right: auto;
+        font-weight: 600;
+        font-size: 30px;
+        padding-left: 10%;
+    }
+
+    .profile {
+        position:relative ;
+        width: 320px;
+        height: 320px;
+        background-color: black;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-left: 19%;
+    }
+
+    .greetings h1 {
+        font-weight: 900;
+        font-size: 50px;
+
+    }
 }
