--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@ body{
     background-color: var(--primary-color);
    padding: 0;
    margin:0;
-   height: 1000vh;
 }
 
 nav .navbar {
@@ -66,20 +65,19 @@ nav .navbar h1 {
     color: #85E2FF;
 }
 
-.greetings .btn1 {
+.btn1 {
     color: #fff;
     background-color: #554EF1;
     font-weight: 700;
     border-radius: 10px;
-
 }
-.greetings .btn1:hover{
+
+.btn1:hover{
     color: black;
     background-color: #85E2FF;
 
 }
-
-.greetings .btn2 {
+ .btn2 {
     color: black;
     background-color: #fff;
     font-weight: 700;
@@ -87,7 +85,7 @@ nav .navbar h1 {
     border-radius: 10px;
 }
 
-.greetings .btn2:hover{
+.btn2:hover{
     color: black;
     background-color: #85E2FF;
 
@@ -178,9 +176,11 @@ nav .navbar h1 {
 
 .about {
     background-color: #E8E8E8;
-    height: 100vh;
+    height: 90vh;
+    width: 100%;
     margin-top: 16%;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .about .about-pict{
@@ -225,19 +225,111 @@ nav .navbar h1 {
 .text h4{
     line-height: 2;
 }
+.about a{
+   margin-left: 22px;
+    font-size: 2.5rem;
+}
 
-.about  button{ 
+.about .button{
+    margin-top:4rem ;
+}
+.about button{
+    margin-bottom:20px ;
+}
+
+.simple-icons--codeigniter {
+    display: inline-block;
+    width: 4em;
+    height: 4em;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M11.466 0c.88 1.423-.28 3.306-1.207 4.358c-.899 1.02-1.992 1.873-2.985 2.8c-1.066.996-2.091 2.044-2.967 3.213c-1.753 2.339-2.827 5.28-2.038 8.199c.788 2.916 3.314 4.772 6.167 5.429c-1.44-.622-2.786-2.203-2.79-3.82c-.003-1.765 1.115-3.262 2.505-4.246c-.167.632-.258 1.21.155 1.774a1.68 1.68 0 0 0 1.696.642c1.487-.326 1.556-1.96.674-2.914c-.872-.943-1.715-2.009-1.384-3.377c.167-.685.588-1.328 1.121-1.787c-.41 1.078.755 2.14 1.523 2.67c1.332.918 2.793 1.612 4.017 2.688c1.288 1.132 2.24 2.661 2.047 4.435c-.208 1.923-1.736 3.26-3.45 3.936c3.622-.8 7.365-3.61 7.44-7.627c.093-3.032-1.903-5.717-5.158-7.384c.19.48.074.697-.058.924c-.55.944-2.082 1.152-2.835.184c-1.205-1.548.025-3.216.197-4.855c.215-2.055-1.073-4.049-2.67-5.242'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
     color: #fff;
-    background-color: #554EF1;
+
+  }
+
+  .logo-tect i{
+    font-size: 4rem;
+  }
+
+  .portofolio{
+    height: 90vh;
+    width: 100%;
+    background-color: #E8E8E8;
+  }
+
+  .portofolio .teks{
+    padding-left: 19rem;
+    padding-top: 8rem;
+  }
+
+  .portofolio h1{
     font-weight: 700;
-    border-radius: 10px;
-}
+    font-size: 3rem;
+  }
 
-.about .button {
-    font-size: 30px;
+ .project img{
+    width: 30%;
+    height: 30%;
+    margin-left: 20%;
+ }
+
+ .project .detail {
+    /* background-color: #070F2B; */
+    margin-left: 9rem;
+    margin-right: 20%;
+ }
+
+.detail p{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1rem;
+    margin-left: 30px;
+ }
+
+ .contact{
     
-}
+    padding-top: 7rem;
+ }
+ 
+ .contact h1, .contact h5 {
+    font-weight: 700;
+ }
 
+ .contact i{
+  
+    font-size: 3rem;
+ }
+
+ .contact .detail{
+    margin-top: 9rem;
+    padding-left: 20%;
+    /* background-color:  #0ccff0; */
+ }
+
+ .contact button{
+    margin-left: 13rem;
+ }
+
+ .contact a{
+    margin-left: 30px;
+    
+ }
+
+
+ footer{
+    background-color: #fff;
+    margin-top: 17rem;
+    padding-top: 10px ;
+    padding-bottom: 1px ;
+   
+
+ }
 @media  screen and (max-width:1200px) {
     nav .navbar h1 {
         margin-right: auto;
@@ -260,5 +352,18 @@ nav .navbar h1 {
         font-weight: 900;
         font-size: 50px;
 
+    }
+
+    nav .navbar li {
+        display: inline;
+        font-weight: 600;
+        font-size: 12px;
+        margin-right: 30px;
+    }
+}
+
+@media screen and (max-width:500px){
+    .about .about-pict{
+       display: none;
     }
 }
