--- a/index.css
+++ b/index.css
@@ -224,46 +224,58 @@ nav .navbar h1 {
 }
 
 .about .about-pict{
-    position: absolute;
+    position: relative;
     /* border: solid 2px; */    
-    border-radius: 120px ;
+    border-radius: 25% ;
     overflow: hidden;
-    height: 26rem;
-    width: 26rem;
-    margin-left: 7rem;
+    width: 23rem;
+    height: 23rem;
+    margin-left: 9rem;
     margin-top: 10%;
+  
+
+
+}
+.about img{
+   position: absolute;
+   height: 23rem;
+   width: 30rem;
+   object-fit: cover;
+    object-position: -2rem;
+   /* margin-right:10rem; */
+   
 }
 .about .container{
-    width: 20%;
-    margin-left: 0;
-    justify-content: center;
+    width: 50%;
+    height: auto;
+    
+    /* margin-left: 45%; */
+    padding-top: 3rem;
 
 }
 
- .about img{
-    position: absolute;
-    height: 130%;
-    width: 26rem;
-    object-fit: cover;
-}
 
-.text{
+/* .text{
     margin-top: 4%;
     margin-left: 40%;
     margin-right:5%;
-}   
+}    */
 
-.text h1{
+ .text h1{
     font-weight: 700;
     font-size: 3rem;
+    width: 50%;
 }
 
+
 .text h5{
-    margin-left: 4%;
+   width: 50%;
 }
 
 .text h4{
     line-height: 2;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 .about a{
    margin-left: 22px;
@@ -272,6 +284,7 @@ nav .navbar h1 {
 
 .about .button{
     margin-top:4rem ;
+    margin-left: 10%;
 }
 .about button{
     margin-bottom:20px ;
@@ -410,20 +423,24 @@ nav .navbar h1 {
     }
 
     .about .about-pict{
-        /* position: absolute; */
+        position: relative;
         /* border: solid 2px; */    
         border-radius: 120px ;
         overflow: hidden;
         height: 19rem;
         width: 19rem;
         margin-left: 7rem;
-        margin-top: 10%;
+        margin-top: 15rem;
+     
     }
 
     .about img{
-        width: 20rem;
+        width: 22rem;
     }
 
+    .about .text{
+        padding-top: 10rem;
+    }
     .text h1{
         font-weight: 700;
         font-size: 2.5rem;
