porto project tambahan

--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
-:root{
+:root {
     font-family: 'League Spartan', sans-serif;
     --primary-color: #070F2B;
-    --secondary-color : #E8E8E8;
+    --secondary-color: #E8E8E8;
 }
 
-*{
+* {
     font-family: 'League Spartan', sans-serif;
-    
+
 }
-body{
+
+body {
     background-color: var(--primary-color);
-   padding: 0;
-   margin:0;
-   /* overflow: hidden; */
+    padding: 0;
+    margin: 0;
+    /* overflow: hidden; */
 }
 
 nav .navbar {
@@ -27,23 +28,23 @@ nav .navbar li {
     margin-right: 30px;
 }
 
-nav .navbar li:hover{
+nav .navbar li:hover {
     border-bottom: solid white 2px;
     padding-bottom: 1rem;
-    
+
 }
 
-nav .navbar .list{
+nav .navbar .list {
     padding-right: 90px;
     padding-top: 0.5rem;
 }
 
-nav .navbar a{
+nav .navbar a {
     text-decoration: none;
     color: #fff;
     text-align: center;
     margin: 15px;
-    
+
 }
 
 nav .navbar h1 {
@@ -53,14 +54,14 @@ nav .navbar h1 {
     padding-left: 10%;
 }
 
-.greetings{ 
+.greetings {
     padding-top: 4rem;
     display: flex;
     padding-right: 20px;
     overflow: hidden;
 }
 
-.greetings .content{
+.greetings .content {
     padding-left: 12%;
     /* background-color: #0ccff0; */
 }
@@ -70,44 +71,47 @@ nav .navbar h1 {
     font-size: 55px;
 }
 
-.greetings h1 span{
+.greetings h1 span {
     color: #85E2FF;
 }
 
-.konten-kata{
+.konten-kata {
     width: 100%;
-   overflow: hidden;
+    overflow: hidden;
 
 }
 
-.konten-kata .kata{
-    position:relative;
+.konten-kata .kata {
+    position: relative;
     color: #85E2FF;
     font-size: 30px;
     font-weight: 700;
 }
 
-.konten-kata .kata.first-text{
+.konten-kata .kata.first-text {
     color: #fff;
 }
 
-.konten-kata .kata.sec-text:before{
+.konten-kata .kata.sec-text:before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-color:var(--primary-color);
-    border-left:2px solid #4070f4 ;
+    background-color: var(--primary-color);
+    border-left: 2px solid #4070f4;
     animation: animate 4s steps(12) infinite;
 }
 
 @keyframes animate {
-    40%, 60%{
+
+    40%,
+    60% {
         left: calc(100% + 1px);
     }
-    100%{
+
+    100% {
         left: 0%;
     }
 }
@@ -119,12 +123,13 @@ nav .navbar h1 {
     border-radius: 10px;
 }
 
-.btn1:hover{
+.btn1:hover {
     color: black;
     background-color: #85E2FF;
 
 }
- .btn2 {
+
+.btn2 {
     color: black;
     background-color: #fff;
     font-weight: 700;
@@ -132,28 +137,28 @@ nav .navbar h1 {
     border-radius: 10px;
 }
 
-.btn2:hover{
+.btn2:hover {
     color: black;
     background-color: #85E2FF;
 
 }
 
-.greetings .logo{
+.greetings .logo {
     font-size: 30px;
     margin-top: 2rem;
 }
 
-.greetings .gambar{
+.greetings .gambar {
     margin-left: 22%;
 }
 
-.greetings .gambar .img{
+.greetings .gambar .img {
     border-radius: 50%;
     max-height: 22rem;
-    max-width: 22rem;    
+    max-width: 22rem;
 }
 
-.greetings .lingkaran{
+.greetings .lingkaran {
     width: 23rem;
     height: 23rem;
     border: 6px solid white;
@@ -164,7 +169,7 @@ nav .navbar h1 {
 }
 
 .profile {
-    position:relative ;
+    position: relative;
     width: 400px;
     height: 400px;
     background-color: black;
@@ -173,29 +178,30 @@ nav .navbar h1 {
     margin-left: 22%;
 }
 
-.profile::before{
+.profile::before {
     content: '';
     position: absolute;
     inset: -10px 110px;
-    background: linear-gradient(315deg, #0ccff0, #d400d4);    
+    background: linear-gradient(315deg, #0ccff0, #d400d4);
     transition: 0.5s;
     animation: animasi 4s linear infinite;
 }
 
 .profile:hover::before {
-    inset:-20px 0px;
+    inset: -20px 0px;
 }
 
 @keyframes animasi {
     0% {
         transform: rotate(0deg);
     }
-    0%{
+
+    0% {
         transform: rotate(360deg);
     }
 }
 
-.profile::after{
+.profile::after {
     content: '';
     position: absolute;
     inset: 6px;
@@ -203,16 +209,17 @@ nav .navbar h1 {
     border-radius: 50%;
     z-index: 1;
 }
-.border-img{
+
+.border-img {
     position: absolute;
     inset: 20px;
     border: solid 6px;
     z-index: 3;
-    border-radius: 50% ;
+    border-radius: 50%;
     overflow: hidden;
 }
 
-.border-img img{
+.border-img img {
     position: absolute;
     top: 0;
     left: 0;
@@ -230,58 +237,61 @@ nav .navbar h1 {
     flex-wrap: wrap;
 }
 
-.about .about-pict{
+.about .about-pict {
     position: absolute;
-    /* border: solid 2px; */    
-    border-radius: 120px ;
+    /* border: solid 2px; */
+    border-radius: 120px;
     overflow: hidden;
     height: 26rem;
     width: 26rem;
     margin-left: 7rem;
     margin-top: 10%;
 }
-.about .container{
+
+.about .container {
     width: 20%;
     margin-left: 0;
     justify-content: center;
 
 }
 
- .about img{
+.about img {
     position: absolute;
     height: 130%;
     width: 26rem;
     object-fit: cover;
 }
 
-.text{
+.text {
     margin-top: 4%;
     margin-left: 40%;
-    margin-right:5%;
-}   
+    margin-right: 5%;
+}
 
-.text h1{
+.text h1 {
     font-weight: 700;
     font-size: 3rem;
 }
 
-.text h5{
+.text h5 {
     margin-left: 4%;
 }
 
-.text h4{
+.text h4 {
     line-height: 2;
 }
-.about a{
-   margin-left: 22px;
+
+.about a {
+    margin-left: 22px;
     font-size: 2.5rem;
 }
 
-.about .button{
-    margin-top:4rem ;
+.about .button {
+    margin-top: 4rem;
 }
-.about button{
-    margin-bottom:20px ;
+
+.about button {
+    margin-bottom: 20px;
 }
 
 .simple-icons--codeigniter {
@@ -298,85 +308,86 @@ nav .navbar h1 {
     mask-size: 100% 100%;
     color: #fff;
 
-  }
+}
 
-  .logo-tect i{
+.logo-tect i {
     font-size: 4rem;
-  }
+}
 
-  .portofolio{
+.portofolio {
     height: 90vh;
     width: 100%;
     background-color: #E8E8E8;
-  }
+}
 
-  .portofolio .teks{
+.portofolio .teks {
     padding-left: 19rem;
     padding-top: 8rem;
-  }
+}
 
-  .portofolio h1{
+.portofolio h1 {
     font-weight: 700;
     font-size: 3rem;
-  }
+}
 
- .project img{
+.project img {
     width: 30%;
     height: 30%;
     margin-left: 20%;
- }
+}
 
- .project .detail {
+.project .detail {
     /* background-color: #070F2B; */
     margin-left: 9rem;
     margin-right: 20%;
- }
+}
 
-.detail p{
+.detail p {
     font-size: 20px;
     font-weight: 500;
     line-height: 1rem;
     margin-left: 30px;
- }
+}
 
- .contact{
-    
+.contact {
+
     padding-top: 7rem;
- }
- 
- .contact h1, .contact h5 {
+}
+
+.contact h1,
+.contact h5 {
     font-weight: 700;
- }
+}
 
- .contact i{
-  
+.contact i {
+
     font-size: 3rem;
- }
+}
 
- .contact .detail{
+.contact .detail {
     margin-top: 9rem;
     padding-left: 20%;
     /* background-color:  #0ccff0; */
- }
+}
 
- .contact button{
+.contact button {
     margin-left: 13rem;
- }
+}
 
- .contact a{
+.contact a {
     margin-left: 30px;
-    
- }
+
+}
 
 
- footer{
+footer {
     background-color: #fff;
     margin-top: 17rem;
-    padding-top: 10px ;
-    padding-bottom: 1px ;
- }
+    padding-top: 10px;
+    padding-bottom: 1px;
+}
 
-@media  (min-width: 1025px) and (max-width:1400px) {
+@media (min-width: 1025px) and (max-width:1400px) {
     nav .navbar h1 {
         margin-right: auto;
         font-weight: 600;
@@ -385,7 +396,7 @@ nav .navbar h1 {
     }
 
     .profile {
-        position:relative ;
+        position: relative;
         width: 320px;
         height: 320px;
         background-color: black;
@@ -416,10 +427,10 @@ nav .navbar h1 {
         flex-wrap: wrap;
     }
 
-    .about .about-pict{
+    .about .about-pict {
         /* position: absolute; */
-        /* border: solid 2px; */    
-        border-radius: 120px ;
+        /* border: solid 2px; */
+        border-radius: 120px;
         overflow: hidden;
         height: 19rem;
         width: 19rem;
@@ -427,31 +438,31 @@ nav .navbar h1 {
         margin-top: 10%;
     }
 
-    .about img{
+    .about img {
         width: 20rem;
     }
 
-    .text h1{
+    .text h1 {
         font-weight: 700;
         font-size: 2.5rem;
         margin-left: 0.5rem;
     }
 
-    .text h4{
+    .text h4 {
         font-size: 1.1rem;
     }
 
-    .about a{
+    .about a {
         margin-left: 20px;
-         font-size: 2rem;
-     }
+        font-size: 2rem;
+    }
 
-     
-     .about .button{
-         margin-top:1rem ;
-     }
 
-     .simple-icons--codeigniter {
+    .about .button {
+        margin-top: 1rem;
+    }
+
+    .simple-icons--codeigniter {
         display: inline-block;
         width: 3em;
         height: 3em;
@@ -465,64 +476,64 @@ nav .navbar h1 {
         mask-size: 100% 100%;
         color: #fff;
         margin-left: 15px;
-      }
-    
-      .logo-tect i{
-        font-size: 3rem;
-      }
+    }
 
-      .portofolio{
-        height:100vh;
+    .logo-tect i {
+        font-size: 3rem;
+    }
+
+    .portofolio {
+        height: 140vh;
         width: 100%;
         background-color: #E8E8E8;
-      }
-    
-      .portofolio .teks{
+    }
+
+    .portofolio .teks {
         padding-left: 15rem;
         padding-top: 4rem;
-      }
-    
-      .portofolio h1{
+    }
+
+    .portofolio h1 {
         font-weight: 600;
         font-size: 2.5rem;
-      } 
-      
-      .project img{
+    }
+
+    .project img {
         width: 30%;
         height: 30%;
         margin-left: 15%;
-     }
-    
-     .project .detail {
+    }
+
+    .project .detail {
         /* background-color: #070F2B; */
         margin-left: 8rem;
         margin-right: 15%;
-     }
-    
-    .detail p{
+    }
+
+    .detail p {
         font-size: 20px;
         font-weight: 500;
         line-height: 1.5rem;
         margin-left: 30px;
-     }
+    }
 
-     .detail .tombol{
-        margin-left:2.5rem ;
-     }
+    .detail .tombol {
+        margin-left: 2.5rem;
+    }
 
-     .contact .detail{
+    .contact .detail {
         margin-top: 7rem;
         padding-left: 11%;
         /* background-color:  #0ccff0; */
-     }
+    }
 
-     footer{
+    footer {
         margin-top: 12rem;
-     }
+    }
 }
 
-@media screen and (max-width:500px){
-    .about .about-pict{
-       display: none;
+@media screen and (max-width:500px) {
+    .about .about-pict {
+        display: none;
     }
 }
