--- a/index.css
+++ b/index.css
@@ -311,7 +311,7 @@ nav .navbar h1 {
   }
 
   .portofolio{
-    height: 90vh;
+    height:130vh;
     width: 100%;
     background-color: #E8E8E8;
   }
@@ -482,7 +482,7 @@ nav .navbar h1 {
       }
 
       .portofolio{
-        height:100vh;
+        height:200vh;
         width: 100%;
         background-color: #E8E8E8;
       }
@@ -531,8 +531,159 @@ nav .navbar h1 {
      }
 }
 
-@media screen and (max-width:500px){
-    .about .about-pict{
-       display: none;
+@media (min-width: 500px) and (max-width:1025px){
+    nav .navbar h1 {
+        margin-right: auto;
+        font-weight: 600;
+        font-size: 25px;
+        padding-left: 10%;
     }
+
+    .profile {
+     
+        /* position:relative ; */
+        width: 250px;
+        height: 250px;
+        background-color: black;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-bottom: 1rem;
+        margin-right: 30%;
+
+    }
+
+    .greetings{
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .greetings h1 {
+        font-weight: 900;
+        font-size: 50px;
+
+    }
+
+    nav .navbar li {
+        display: inline;
+        font-weight: 600;
+        font-size: 12px;
+        margin-right: 30px;
+    }
+
+    .about {
+        background-color: #E8E8E8;
+        height: 100vh;
+        width: 100%;
+        margin-top: 16%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .about .about-pict{
+        position: relative;
+        /* border: solid 2px; */    
+        border-radius: 120px ;
+        overflow: hidden;
+        height: 19rem;
+        width: 19rem;
+        margin-left: 7rem;
+        margin-top: 15rem;
+     
+    }
+
+    .about img{
+        width: 22rem;
+    }
+
+    .about .text{
+        padding-top: 10rem;
+    }
+    .text h1{
+        font-weight: 700;
+        font-size: 2.5rem;
+        margin-left: 0.5rem;
+    }
+
+    .text h4{
+        font-size: 1.1rem;
+    }
+
+    .about a{
+        margin-left: 20px;
+         font-size: 2rem;
+     }
+
+     
+     .about .button{
+         margin-top:1rem ;
+     }
+
+     .simple-icons--codeigniter {
+        display: inline-block;
+        width: 3em;
+        height: 3em;
+        --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M11.466 0c.88 1.423-.28 3.306-1.207 4.358c-.899 1.02-1.992 1.873-2.985 2.8c-1.066.996-2.091 2.044-2.967 3.213c-1.753 2.339-2.827 5.28-2.038 8.199c.788 2.916 3.314 4.772 6.167 5.429c-1.44-.622-2.786-2.203-2.79-3.82c-.003-1.765 1.115-3.262 2.505-4.246c-.167.632-.258 1.21.155 1.774a1.68 1.68 0 0 0 1.696.642c1.487-.326 1.556-1.96.674-2.914c-.872-.943-1.715-2.009-1.384-3.377c.167-.685.588-1.328 1.121-1.787c-.41 1.078.755 2.14 1.523 2.67c1.332.918 2.793 1.612 4.017 2.688c1.288 1.132 2.24 2.661 2.047 4.435c-.208 1.923-1.736 3.26-3.45 3.936c3.622-.8 7.365-3.61 7.44-7.627c.093-3.032-1.903-5.717-5.158-7.384c.19.48.074.697-.058.924c-.55.944-2.082 1.152-2.835.184c-1.205-1.548.025-3.216.197-4.855c.215-2.055-1.073-4.049-2.67-5.242'/%3E%3C/svg%3E");
+        background-color: currentColor;
+        -webkit-mask-image: var(--svg);
+        mask-image: var(--svg);
+        -webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+        -webkit-mask-size: 100% 100%;
+        mask-size: 100% 100%;
+        color: #fff;
+        margin-left: 15px;
+      }
+    
+      .logo-tect i{
+        font-size: 3rem;
+      }
+
+      .portofolio{
+        height:100vh;
+        width: 100%;
+        background-color: #E8E8E8;
+      }
+    
+      .portofolio .teks{
+        padding-left: 15rem;
+        padding-top: 4rem;
+      }
+    
+      .portofolio h1{
+        font-weight: 600;
+        font-size: 2.5rem;
+      } 
+      
+      .project img{
+        width: 30%;
+        height: 30%;
+        margin-left: 15%;
+     }
+    
+     .project .detail {
+        /* background-color: #070F2B; */
+        margin-left: 8rem;
+        margin-right: 15%;
+     }
+    
+    .detail p{
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.5rem;
+        margin-left: 30px;
+     }
+
+     .detail .tombol{
+        margin-left:2.5rem ;
+     }
+
+     .contact .detail{
+        margin-top: 7rem;
+        padding-left: 11%;
+        /* background-color:  #0ccff0; */
+     }
+
+     footer{
+        margin-top: 12rem;
+     }
 }
